apps/home-assistant/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
