apps/home-assistant/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: internal-https
  rules:
    - backendRefs:
        - name: home-assistant 
          port: 80
